--- a/index.html
+++ b/index.html
@@ -570,84 +570,89 @@
       </section>
 
       <!-- clients section -->
-      <section class="section clients">
-        <h2 class="clients-title">Постійні клієнти</h2>
-        <div class="container clients-container">
-          <ul class="clients-list list">
-            <li class="clients-item">
+      <section class="clients section ">
+        <h2 class="clients__title">Постійні клієнти</h2>
+        <div class="clients__container container">
+          <ul class="clients__list list">
+            <li class="clients__item">
               <a
-                class="clients-link link"
+                class="clients__link link"
                 href=""
                 aria-label=""
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="clients-icon" width="106" height="60">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./image/icons.svg#logo-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
+
+            <li class="clients__item">
               <a
-                class="clients-link link"
+                class="clients__link link"
                 href=""
                 aria-label=""
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="clients-icon" width="106" height="60">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./image/icons.svg#logo-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
+
+            <li class="clients__item">
               <a
-                class="clients-link link"
+                class="clients__link link"
                 href=""
                 aria-label=""
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="clients-icon" width="106" height="60">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./image/icons.svg#logo-3"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
+
+            <li class="clients__item">
               <a
-                class="clients-link link"
+                class="clients__link link"
                 href=""
                 aria-label=""
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="clients-icon" width="106" height="60">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./image/icons.svg#logo-4"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
+
+            <li class="clients__item">
               <a
-                class="clients-link link"
+                class="clients__link link"
                 href=""
                 aria-label=""
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="clients-icon" width="106" height="60">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./image/icons.svg#logo-5"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
+
+            <li class="clients__item">
               <a
-                class="clients-link link"
+                class="clients__link link"
                 href=""
                 aria-label=""
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="clients-icon" width="106" height="60">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./image/icons.svg#logo-6"></use>
                 </svg>
               </a>
@@ -659,21 +664,21 @@
 
     <!-- footer -->
     <footer class="footer">
-      <div class="container footer-container">
-        <div class="footer-addres-section">
-          <a class="logo footer__logo" href="" lang="en">
+      <div class="footer__container container ">
+        <div>
+          <a class="footer__logo logo " href="" lang="en">
             <span class="footer__web">Web</span>Studio
           </a>
           <address class="addres">
-            <p class="addres-text">м. Київ, пр-т Лесі Українки, 26</p>
+            <p class="addres__text">м. Київ, пр-т Лесі Українки, 26</p>
             <ul class="list">
-              <li class="footer-mail">
-                <a class="footer-contacts link" href="mailto:info@devstudio.com"
+              <li class="footer__contacts">
+                <a class="footer__link link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
               <li>
-                <a class="footer-contacts link" href="tel:+380961111111"
+                <a class="footer__link link" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
               </li>
@@ -681,60 +686,60 @@
           </address>
         </div>
 
-        <div class="footer-socials-section">
-          <p class="footer-title">приєднуйтесь</p>
-          <ul class="footer-socials list">
-            <li class="footer-socials-item">
+        <div class="footer-socials">
+          <p class="footer__title">приєднуйтесь</p>
+          <ul class="footer-socials__list  list">
+            <li class="footer-socials__item">
               <a
-                class="footer-socials-link link"
+                class=" footer-socials__link link"
                 href="https://instagram.com"
                 aria-label="Instagram"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="footer-socials-icon" width="20" height="20">
+                <svg class="footer-socials__icon" width="20" height="20">
                   <use href="./image/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="footer-socials-item">
+            <li class="footer-socials__item">
               <a
-                class="footer-socials-link link"
+                class="footer-socials__link link"
                 href="https://twitter.com"
                 aria-label="Twitter"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="footer-socials-icon" width="20" height="20">
+                <svg class="footer-socials__icon" width="20" height="20">
                   <use href="./image/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="footer-socials-item">
+            <li class="footer-socials__item">
               <a
-                class="footer-socials-link link"
+                class="footer-socials__link link"
                 href="https://facebook.com"
                 aria-label="Facebook"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="footer-socials-icon" width="20" height="20">
+                <svg class="footer-socials__icon" width="20" height="20">
                   <use href="./image/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="footer-socials-item">
+            <li class="footer-socials__item">
               <a
-                class="footer-socials-link link"
+                class="footer-socials__link link"
                 href="https://linkedin.com"
                 aria-label="Linkedin"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="footer-socials-icon" width="20" height="20">
+                <svg class="footer-socials__icon" width="20" height="20">
                   <use href="./image/icons.svg#linkedin"></use>
                 </svg>
               </a>
@@ -743,23 +748,23 @@
         </div>
 
         <div class="footer-mailing">
-          <p class="footer-title">Підпишіться на розсилку</p>
+          <p class="footer__title">Підпишіться на розсилку</p>
 
-          <form class="footer-form">
-            <div class="footer-form-item">
+          <form class="footer__form">
+            <div class="footer-form__item">
               <input
-                class="footer-form-field"
+                class="footer-form__field"
                 type="email"
                 name="email"
                 id="footer-email"
                 placeholder="E-mail"
               />
-              <label class="footer-form-email" for="footer-email"></label>
+              <label  for="footer-email"></label>
             </div>
 
             <button class="btn footer-form__btn" type="submit">
               Підписатися
-              <svg class="icon-send" width="24" height="24">
+              <svg class="footer-form__icon" width="24" height="24">
                 <use href="./image/icons.svg#icon-send"></use>
               </svg>
             </button>
