--- a/portfolio.html
+++ b/portfolio.html
@@ -77,28 +77,28 @@
         <div class="container">
           <h1 class="visually-hidden">Наші пропозиції</h1>
 
-          <ul class="button-list list">
-            <li class="portfolio-button">
-              <button class="button" type="button">Усі</button>
+          <ul class="filters-list list">
+            <li class="filters-list__item">
+              <button class="filters-list__button" type="button">Усі</button>
             </li>
-            <li class="portfolio-button">
-              <button class="button" type="button">Веб-сайти</button>
+            <li class="filters-list__item">
+              <button class="filters-list__button" type="button">Веб-сайти</button>
             </li>
-            <li class="portfolio-button">
-              <button class="button" type="button">Додатки</button>
+            <li class="filters-list__item">
+              <button class="filters-list__button" type="button">Додатки</button>
             </li>
-            <li class="portfolio-button">
-              <button class="button" type="button">Дизайн</button>
+            <li class="filters-list__item">
+              <button class="filters-list__button" type="button">Дизайн</button>
             </li>
-            <li class="portfolio-button">
-              <button class="button" type="button">Маркетинг</button>
+            <li class="filters-list__item">
+              <button class="filters-list__button" type="button">Маркетинг</button>
             </li>
           </ul>
           <!-- </div>
 
 <div class="container projects-container"> -->
-          <ul class="projects-list list">
-            <li class="projects-item">
+          <ul class="projects list">
+            <li class="projects__item">
               <a class="projects-card" href="">
                 <div class="card-description">
                   <img
