--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
             <button class="modal__btn" type="button" data-modal-close>
-              <svg class="modal-btn__icon" width="18" height="18">
+              <svg width="18" height="18">
                 <use href="./image/icons.svg#modal-btn"></use>
               </svg>
             </button>
@@ -174,7 +174,7 @@
                 </label>
               </div>
 
-              <button class="btn register-form__btn" type="submit">Відправити</button>
+              <button class="register-form__btn btn" type="submit">Відправити</button>
             </form>
           </div>
         </div>
@@ -290,8 +290,8 @@
         <h2 class="team__title">Наша команда</h2>
 
         <div class="team__container container ">
-          <ul class="team__list list">
-            <li class="team-card">
+          <ul class="team-card list">
+            <li class="team-card__item">
               <img
                 src="image/img-1.jpg"
                 alt="фото дизайнера Ігора Дем'яненка"
@@ -361,7 +361,7 @@
               </div>
             </li>
 
-            <li class="team-card">
+            <li class="team-card__item">
               <img
                 src="image/img-2.jpg"
                 alt="фото дизайнера Ольги Репіної"
@@ -430,7 +430,7 @@
               </div>
             </li>
 
-            <li class="team-card">
+            <li class="team-card__item">
               <img
                 src="image/img-3.jpg"
                 alt="фото дизайнера Миколи Тарасова"
@@ -498,7 +498,7 @@
               </div>
             </li>
 
-            <li class="team-card">
+            <li class="team-card__item">
               <img
                 src="image/img-4.jpg"
                 alt="фото дизайнера Михайла Єрмакова"
@@ -672,13 +672,13 @@
           <address class="addres">
             <p class="addres__text">м. Київ, пр-т Лесі Українки, 26</p>
             <ul class="list">
-              <li class="footer__contacts">
-                <a class="footer__link link" href="mailto:info@devstudio.com"
+              <li class="addres__contacts">
+                <a class="addres__link link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
               <li>
-                <a class="footer__link link" href="tel:+380961111111"
+                <a class="addres__link link" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
               </li>
