--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
   <body class="page">
     <!-- header -->
     <header class="header">
-      <div class="header__container container">
+      <div class="header__container">
         <a class="header__logo logo" href="" lang="en">
           <span class="header__web">Web</span>Studio
         </a>
@@ -74,8 +74,8 @@
     </header>
     <!--  portfolio page sections -->
     <main>
-      <section class="section">
-        <div class="container">
+      <section class="portfolio">
+        <div class="portfolio-container">
           <h1 class="visually-hidden">Наші пропозиції</h1>
 
           <ul class="filters-list list">
@@ -299,7 +299,7 @@
 
     <!-- footer -->
     <footer class="footer">
-      <div class="footer__container container ">
+      <div class="footer__container">
         <div>
           <a class="footer__logo logo " href="" lang="en">
             <span class="footer__web">Web</span>Studio
