--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body class="page">
     <!-- header -->
     <header class="header">
-      <div class="header__container container">
+      <div class="header__container">
         <a class="header__logo logo" href="" lang="en">
           <span class="header__web">Web</span>Studio
         </a>
@@ -82,7 +82,7 @@
     <main>
       <!-- hero-section -->
       <section class="hero">
-        <div class="hero__container container ">
+        <div class="hero__container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero__btn btn " type="button" data-modal-open>
             Замовити послугу
@@ -182,8 +182,8 @@
       </section>
 
       <!-- feature -->
-      <section class="feature section ">
-        <div class="feature__container container">
+      <section class="feature">
+        <div class="feature__container">
           <h2 class="visually-hidden">Особливості</h2>
 
           <ul class=" feature__list list">
@@ -243,8 +243,8 @@
       </section>
 
       <!-- doings -->
-      <section class="doings section">
-        <div class="doings__container container ">
+      <section class="doings">
+        <div class="doings__container">
           <h2 class="doings__title">Чим ми займаємося</h2>
           <ul class="doings__list list">
             <li class="doings__item">
@@ -287,10 +287,10 @@
       </section>
 
       <!-- team -->
-      <section class="team section">
+      <section class="team">
         <h2 class="team__title">Наша команда</h2>
 
-        <div class="team__container container ">
+        <div class="team__container">
           <ul class="team-card list">
             <li class="team-card__item">
               <img
@@ -573,7 +573,7 @@
       <!-- clients section -->
       <section class="clients section ">
         <h2 class="clients__title">Постійні клієнти</h2>
-        <div class="clients__container container">
+        <div class="clients__container">
           <ul class="clients__list list">
             <li class="clients__item">
               <a
@@ -665,7 +665,7 @@
 
     <!-- footer -->
     <footer class="footer">
-      <div class="footer__container container ">
+      <div class="footer__container">
         <div>
           <a class="footer__logo logo " href="" lang="en">
             <span class="footer__web">Web</span>Studio
